[gd_scene load_steps=17 format=2]

[ext_resource path="res://Buttons/LCARSButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/swiss-911-ultra-compressed-bt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUIElements/Repair.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_bottom = 5
border_color = Color( 0.968627, 0.741176, 0.352941, 1 )
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20
expand_margin_bottom = 8.0

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=15]
content_margin_right = 20.0
bg_color = Color( 0, 0, 0.533333, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=16]
content_margin_right = 20.0
bg_color = Color( 0.2, 0.4, 1, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=17]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=18]
content_margin_left = 20.0
bg_color = Color( 0.533333, 0.133333, 0.0666667, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=19]
content_margin_left = 20.0
bg_color = Color( 0.733333, 0.266667, 0.0666667, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=20]
content_margin_left = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[sub_resource type="DynamicFont" id=13]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=14]
default_font = SubResource( 13 )

[sub_resource type="StyleBoxFlat" id=21]
content_margin_left = 20.0
bg_color = Color( 0.466667, 0.266667, 0.4, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=22]
content_margin_left = 20.0
bg_color = Color( 0.6, 0.466667, 0.666667, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=23]
content_margin_left = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[node name="Repair" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -704.0
margin_bottom = -328.0
rect_min_size = Vector2( 320, 272 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -82.0
margin_bottom = 82.0
custom_constants/separation = 42
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainContainer"]
margin_right = 320.0
margin_bottom = 33.0
rect_min_size = Vector2( 320, 0 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 1 )
text = "Choose a system to repair"
align = 1
valign = 2
uppercase = true

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 75.0
margin_right = 320.0
margin_bottom = 111.0
size_flags_horizontal = 3
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldsButton" parent="MainContainer/ButtonContainer" instance=ExtResource( 1 )]
margin_bottom = 36.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 16 )
text = "Shields"
color = 5

[node name="EnginesButton" parent="MainContainer/ButtonContainer" instance=ExtResource( 1 )]
margin_left = 190.0
margin_right = 320.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 19 )
text = "Engines"
align = 0
color = 3
side = 1

[node name="CancelContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 153.0
margin_right = 320.0
margin_bottom = 189.0
size_flags_horizontal = 3
custom_constants/separation = 60
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/CancelContainer"]
margin_left = 28.0
margin_right = 130.0
margin_bottom = 36.0
theme = SubResource( 14 )

[node name="CostLabel" type="Label" parent="MainContainer/CancelContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 74.0
margin_bottom = 32.0
text = "Energy Cost:"

[node name="CostAmt" type="Label" parent="MainContainer/CancelContainer/HBoxContainer"]
margin_left = 78.0
margin_top = 4.0
margin_right = 102.0
margin_bottom = 32.0
text = "100"

[node name="Cancel" parent="MainContainer/CancelContainer" instance=ExtResource( 1 )]
margin_left = 190.0
margin_right = 320.0
margin_bottom = 36.0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 22 )
text = "Cancel"
align = 0
color = 2
side = 1
[connection signal="pressed" from="MainContainer/ButtonContainer/ShieldsButton" to="." method="_on_ShieldsButton_pressed"]
[connection signal="pressed" from="MainContainer/ButtonContainer/EnginesButton" to="." method="_on_EnginesButton_pressed"]
[connection signal="pressed" from="MainContainer/CancelContainer/Cancel" to="." method="_on_Cancel_pressed"]
